cluster/atlassian/confluence/alderaan/confluence-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence-srv
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: confluence
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: confluence
        track: staging
    spec:
      containers:
      - name: confluence-srv
        image: atlassian/confluence-server:7.3.3-jdk11
        volumeMounts:
        - name: confluence-var
          mountPath: /var/atlassian/application-data/confluence
        - name: jdbc-driver-mysql-5148
          mountPath: /opt/atlassian/confluence/confluence/WEB-INF/lib/mysql-connector-java-5.1.48.jar
          subPath: mysql-connector-java-5.1.48.jar

      volumes:
        - name: confluence-var
          persistentVolumeClaim:
            claimName: confluence-var-pvc
        - name: jdbc-driver-mysql-5148
          configMap:
            name: jdbc-driver-mysql-5148
