cluster/atlassian/confluence/alderaan/confluence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence-service
  namespace: atlassian
  labels:
    app: confluence
spec:
  ports:
  - port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: confluence
